# kulyk-rust

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  justfile  kulyk-rust.def  prompt.txt  pyproject.toml  testing.py  testing_highload.py  ui.html
.cargo/: config.toml
.github/workflows/: docker-build.yml
data/: highload-test__logs.txt
src/: main.rs
