[package]
name = "kulyk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
llama-cpp-2 = { version = "0.1.69", features = ["metal"] }
clap = { version = "*", features = ["derive"] }
anyhow = { version = "*" }
encoding_rs = { version = "*" }

tracing = { version = "*" }
tracing-subscriber = { version = "*" }

axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.6.6", features = ["cors"] }
