
[package]
name = "kulyk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
llama-cpp-2 = { version = "0.1.124", features = ["openmp", "native"] }

clap = { version = "*", features = ["derive"] }
anyhow = { version = "*" }
encoding_rs = { version = "*" }

tracing = { version = "*" }
tracing-subscriber = { version = "*" }

axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors"] }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
